--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 		<div class="row container">
 			<div class="col span_1_of_2 mix apps box">
 				<img src="resources/img/pc1.png" alt="Isometric Perspective Mock-Up" class="portfolio-img">
-				<h4>Isometric Perspective Mock-Up</h4>
+				<h4>Isometric Perspective</h4>
 			</div>
 			<div class="col span_1_of_2 mix apps web box">
 				<img src="resources/img/pc2.png" alt="Time Zone App UI" class="portfolio-img">
