--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="col span_1_of_4 box">
 				<img src="resources/img/flag.png" alt="flag" class="services-icon">
 				<h3>Branding</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam.</p>
 			</div>
 			<div class="col span_1_of_4 box">
 				<img src="resources/img/crayon.png" alt="crayon" class="services-icon">
